ISPN-5536 Base Server onto WildFly 9.0.0.CR2 using feature packs